--- a/Caidi.App/Views/MainWindow.xaml
+++ b/Caidi.App/Views/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        MinWidth="480" MinHeight="640"
+        MinWidth="720" MinHeight="640"
         x:Class="Caidi.App.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
         FontSize="16"
@@ -30,10 +30,22 @@
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         
+        <ListBox
+            Grid.Row="0"
+            Grid.Column="0"
+            Grid.ColumnSpan="2"
+            Items="{Binding Files}">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Name}"/>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+        
         <TextBlock
             Grid.Row="1"
             Grid.Column="0"
-            Text="{Binding FilesPath}">
+            Text="{Binding SourceFolderPath}">
         </TextBlock>
         
         <Button
