--- a/Caidi.App/Views/MainWindow.xaml
+++ b/Caidi.App/Views/MainWindow.xaml
@@ -72,7 +72,7 @@
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Vertical">
-                        <TextBlock Text="{Binding Name}" />
+                        <TextBlock Text="{Binding File.Name}" />
                     </StackPanel>
                 </DataTemplate>
             </ListBox.ItemTemplate>
